fixed room id spacing issue

--- a/public/stylesheets/room.css
+++ b/public/stylesheets/room.css
@@ -14,9 +14,9 @@
     color: deepskyblue;
     font-size:30px;
 }
-.navbar.navbar-dark.bg-dark .navbar-text{
+/* .navbar.navbar-dark.bg-dark .navbar-text{
     color:white;
-}
+} */
 .divider{
     height:15px;
 }
